--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             <div class="social-links">
                 <a href="https://www.instagram.com/silenciokoffee?igsh=MXVnaHFwM2R2ejV5cA==" target="_blank">Instagram</a>
                 <a href="https://www.facebook.com/profile.php?id=61587861547424" target="_blank" rel="noopener">Facebook</a>
-                <a href="https://www.instagram.com/silenciokoffee?igsh=dWdiNWZvMzkwMjAy" target="_blank" rel="noopener">Instagram</a>
+                <a href="https://www.instagram.com/silenciokoffee?igsh=MXVnaHFwM2R2ejV5cA==" target="_blank" rel="noopener">Instagram</a>
             </div>
 
 
