--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                             resaltar notas y carácter en cada taza.
                         </p>
                         <p>
-                            Nuestras presentaciones vienen en bolsas de 250g para el hogar, y también tenemos
+                            Vendemos principalmente en bolsas de 250g para hogar, y también tenemos
                             presentaciones de 1 lb y 5 lb para cafeterías y restaurantes.
                             ¡Descubre tu perfil favorito!
                         </p>
