--- a/index.html
+++ b/index.html
@@ -129,14 +129,14 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             <div class="container">
                 <div class="about-content">
                     <div class="about-text">
-                        <h3>Sobre El Silencio Koffee</h3>
+                        <h3>Sobre EL SILENCIO KOFFEE</h3>
                         <p>
                             Somos una marca de café tostado enfocada en ofrecer una experiencia limpia,
                             aromática y consistente. Seleccionamos el grano y cuidamos el tostado para
                             resaltar notas y carácter en cada taza.
                         </p>
                         <p>
-                            Vendemos principalmente en bolsas de 250g para hogar, y también tenemos
+                            Nuestras presentaciones vienen en bolsas de 250g para hogar, y también tenemos
                             presentaciones de 1 lb y 5 lb para cafeterías y restaurantes.
                             ¡Descubre tu perfil favorito!
                         </p>
